add_executable(run_tests
    clock.cpp
    main.cpp
    matrix2D/misc.cpp
    matrix2D/multiplication.cpp
    matrix2D/rotate.cpp
    vector2D/addition.cpp
    vector2D/misc.cpp
    vector2D/multiplication.cpp
    vector2D/plusEqual.cpp
)
target_compile_features(run_tests PRIVATE cxx_std_17)
target_link_libraries(run_tests
    PRIVATE
        jumpy_engine
)
target_include_directories(run_tests
    PRIVATE
        ../src/include
        common
)
