add_executable(run_tests
    clock.cpp
    main.cpp
    matrix3D/misc.cpp
    matrix3D/multiplication.cpp
    matrix3D/rotate.cpp
    matrix2D/misc.cpp
    matrix2D/multiplication.cpp
    matrix2D/rotate.cpp
    vector2D/addition.cpp
    vector2D/misc.cpp
    vector2D/multiplication.cpp
    vector2D/plusEqual.cpp
    vector3D/addition.cpp
    vector3D/misc.cpp
    vector3D/multiplication.cpp
    vector3D/plusEqual.cpp
)
target_compile_features(run_tests PRIVATE cxx_std_17)
target_link_libraries(run_tests
    PRIVATE
        jumpy_engine
)
target_include_directories(run_tests
    PRIVATE
        ../src/include
        common
)
